<!--This file contains all string values used to design the app. -->
<resources>
    <string name="app_name">To_Do_List_App</string>
    <string name="play_music">Play-Music</string>
    <string name="animation">Animation</string>
    <string name="take_photo">Take-Photo</string>
    <string name="to_do_list_application">To Do List Application</string>
    <string name="add_an_item">Add an Item</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="my_to_do_list">My To Do List</string>
    <string name="show_map">Show-Map</string>
    <string name="exit_app">Exit-App</string>
</resources>