<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout      xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/back_image">


    <!--Top menu layout including options to play music,animation and capture picture -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Button to play sound -->
                <Button
                    android:id="@+id/sound_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/MyButtonStyle"
                    android:text="@string/play_music" />

            <!-- Button to show animation -->
            <Button
                android:id="@+id/fade_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                style="@style/MyButtonStyle"
                android:text="@string/animation" />

            <!-- Button to take picture -->
            <Button
                android:id="@+id/camera_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/MyButtonStyle"
                android:text="@string/take_photo"
                android:layout_marginStart="10sp"/>
    </LinearLayout>

        <!-- To do list app menu items like buttons to add, delete or clear the list -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginTop="100sp"
            style="@style/MyTextStyle"
            android:text="@string/to_do_list_application"
            android:textColor="@color/black"
            android:textSize="@dimen/label_text_size"/>

        <!--edit-text-area to add an item to the list  -->
        <EditText
            android:layout_below="@id/textView"
            android:id="@+id/editText"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_an_item"
            android:textColorHint="@color/black"
            android:textColor="@color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linearLayout1"
                    android:orientation="horizontal"
                    android:layout_below="@id/editText"
                    android:padding="10dp">

                    <!-- Button to add items to the list -->
                    <Button
                        android:id="@+id/add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add"/>

                    <!-- Button to delete selected items from the list -->
                    <Button
                        android:id="@+id/delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete"
                        android:layout_marginStart="70dp"/>

                    <!-- Button to clear the list completely -->
                    <Button
                        android:id="@+id/clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clear"
                        android:layout_marginStart="60dp"/>
                </LinearLayout>

                <!-- Heading - my to do list  -->
                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_below="@id/linearLayout1"
                    android:text="@string/my_to_do_list"
                    style="@style/MyTextStyle"
                    android:textSize="20sp"
                    android:textColor="@color/black" />

                <!-- ImageView to display captured picture -->
                <ImageView
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50sp"
                    android:layout_alignParentEnd="true"
                    />

                <!-- the list  -->
                <ListView
                    android:id="@+id/listView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/textView1"
                    android:choiceMode="multipleChoice"/>

    <!-- Button to show map -->
    <Button
        android:id="@+id/show_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_map"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40sp"
        android:layout_marginStart="10sp"/>

    <!--Exit button to exit app -->
    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_app"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40sp"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>